--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_storage: ^12.3.6
   flutter:
     sdk: flutter
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   http: ^1.2.2
   image_picker: ^1.1.2
   intl: ^0.19.0
