--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_storage: ^12.3.6
   flutter:
     sdk: flutter
+  google_fonts: ^6.2.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   http: ^1.2.2
@@ -65,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/banners/
     - assets/videos/
     - assets/pdf/
   #   - images/a_dot_ham.jpeg
